--- a/Website/index.html
+++ b/Website/index.html
@@ -11,7 +11,7 @@
     <navbar>
         <div class="header">
             <h1 class="title"><span>NS</span>Keys</h1>
-            <h4>@GitHub</h4>
+            <a href="https://github.com/indra0120/gymnasiearbete"><h4>@GitHub</h4></a>
             <h4>@Documentation</h4>
             <h4>@About</h4>
         </div>
@@ -26,7 +26,7 @@
                     <p class="info">An easy and quick way to find the cheapest games through Discord</p>
                 </li>
                 <li class="slide">
-                    <p class="info2">How to use NSKeys</p>
+                    <p class="info2">NSKeys in Action</p>
                     <div class="video">
                         <video width="400" height="200" controls>
                             <source src="movie.mp4" type="video/mp4">
@@ -34,7 +34,7 @@
                     </div>
                 </li>
                 <li class="slide">
-                    <p class="info3">More about...</p>
+                    <p class="info3">How to use NSKeys</p>
                 </li>
             </ul>
         </div>
