--- a/Website/index.html
+++ b/Website/index.html
@@ -28,7 +28,7 @@
                 <li class="slide">
                     <p class="info2">NSKeys in Action</p>
                     <div class="video">
-                        <video width="400" height="200" controls>
+                        <video id="video" controls>
                             <source src="movie.mp4" type="video/mp4">
                             <source src="movie.ogg" type="video/ogg">
                     </div>
