--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,14 +8,21 @@
     <script src="script.js"defer></script>
 </head>
 <body>
-    <navbar>
+    <nav>
         <div class="header">
             <h1 class="title"><span>NS</span>Keys</h1>
-            <a href="https://github.com/indra0120/gymnasiearbete"><h4>@GitHub</h4></a>
-            <h4>@Documentation</h4>
-            <h4>@About</h4>
+                <div class="nav-menu">
+                    <a href="https://github.com/indra0120/gymnasiearbete"><h4>@GitHub</h4></a>
+                    <a href=""><h4>@Documentation</h4></a>
+                    <a href=""><h4>@About</h4></a>
+                </div>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </div>
-    </navbar> 
+    </nav> 
     
     <section aria-label="information">
         <div class="carousel" data-carousel>
@@ -40,8 +47,7 @@
         </div>
     </section>
     
-    <div class="section">
-
+    <div class="buttoninv">
         <a href="https://discord.com/api/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot" target="_blank"><button class="invite">Invite me!</button></a>
     </div>
 
