--- a/htu.html
+++ b/htu.html
@@ -11,7 +11,7 @@
         <nav>
             <div class="header">
                 <h1 class="title"><span>NS</span>Keys</h1>
-                    <div class="currentchannel" id="currentchannel-el"><a><p><i>#</i>&nbsp;How to use</p></a></div>
+                    <div class="currentchannel" id="currentchannel-el"><a><p><i>#</i>&nbsp;how to use</p></a></div>
                     <div class="nav-menu">
                         <a href="https://github.com/indra0120/gymnasiearbete"><h4>@GitHub</h4></a>
                         <a href=""><h4>@Documentation</h4></a>
@@ -32,14 +32,14 @@
     
             <ul>
                 <a href="index.html">
-                    <li tabindex="1"><i>#</i>&nbsp;Add NSKeys</li>
+                    <li tabindex="1"><i>#</i>&nbsp;add nskeys</li>
                 </a>
-                <li class="mainlist" tabindex="1"><i>#</i>&nbsp;How to use</li>
+                <li class="mainlist" tabindex="1"><i>#</i>&nbsp;how to use</li>
                 <a href="code.html">
-                    <li tabindex="1"><i>#</i>&nbsp;Code</li>
+                    <li tabindex="1"><i>#</i>&nbsp;code</li>
                 </a>
                 <a href="contact.html">
-                    <li tabindex="1"><i>#</i>&nbsp;Contact</li>
+                    <li tabindex="1"><i>#</i>&nbsp;contact</li>
                 </a>
             </ul>
             
