--- a/code.html
+++ b/code.html
@@ -35,7 +35,7 @@
         <div class="codemessage">
              <img src="/nskeys.png" alt="">
              <p>nskeys</p>
-             <div class="textcode" style="overflow-y:scroll; height:61vh;" ><p># bot.py 
+             <div class="textcode" style="overflow-y:scroll; height:61vh;" ><code># bot.py 
                 # https://www.scrapingbee.com/blog/selenium-python/ source 
                 
                 #-------         Imports         -------
@@ -165,7 +165,7 @@
                     except Exception as e:
                         print(e)
                 
-                bot.run(os.getenv('DISCORD_TOKEN'))</p></div>
+                bot.run(os.getenv('DISCORD_TOKEN'))</code></div>
         </div>
         <div class="textchannels">
             <div class="description"><span class="test">˯</span>TEXT CHANNELS</div>
