--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title> <link rel="stylesheet" href="htu.css">
         <script src="script.js"defer></script> <link rel="stylesheet" href="style.css">
-        
-                
+        <link rel="icon" href="/favicon-32x32.png">
     </head>
     <body>
         <nav>
