--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <div class="description"><span class="test">˯</span>TEXT CHANNELS</div>
     
             <ul>
-                <li class="mainlist" tabindex="1"><i>#</i>&nbsp;add nskeys</li>
+                <li class="mainlist" tabindex="1"><i>#</i>&nbsp;add-nskeys</li>
                 <a href="htu.html">
-                    <li tabindex="1"><i>#</i>&nbsp;how to use</li>
+                    <li tabindex="1"><i>#</i>&nbsp;how-to-use</li>
                 </a>
                 <a href="code.html">
                     <li tabindex="1"><i>#</i>&nbsp;code</li>
