--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title> <link rel="stylesheet" href="htu.css">
+        <title>NSKeys</title> <link rel="stylesheet" href="htu.css">
         <script src="script.js"defer></script> <link rel="stylesheet" href="style.css">
         <link rel="icon" href="/favicon-32x32.png">
     </head>
