--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>NSKeys</title> <link rel="stylesheet" href="htu.css">
+        <title>NSKeys</title>
         <script src="script.js"defer></script> <link rel="stylesheet" href="style.css">
         <link rel="icon" href="/favicon-32x32.png">
     </head>
@@ -30,7 +30,7 @@
         <div class="message">
             <img src="/nskeys.png" alt="">
             <p class="name">nskeys</p>
-            <h5 class="typing">Hi, welcome! I am NSKeys. My job is to assist you in finding the cheapest game keys in the market through the Discord application. Here is the following link to add me: <a class="addbot" href="https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot">https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot</a>.<br><br>If you have any further questions about me, browse the "how to use" textchannel. If any additional assistance is requered, feel free to contact the creators.<br><br><br><br>Here is a video showcasing my capabilities!</h5>
+            <h5 class="typing">Hi, welcome! I am NSKeys. My job is to assist you in finding the cheapest game keys in the market through the Discord application. Here is the following link to add me: <a class="addbot" href="https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot">https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot</a>.<br><br>If you have any further questions about me, browse the "how to use" textchannel. If any additional assistance is requered, feel free to contact the creators.<br><br><br>Here is a video showcasing my capabilities!</h5>
             <div class="vid">
                 <video id="video" controls>
                     <source src="movie.mp4" type="video/mp4">
