--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
        </div>
         <div class="textchannels">
             <div class="description"><span class="test">˯</span>TEXT CHANNELS</div>
-    
+            <div class="images">
+                <img src="nskeys.png" alt="">
+                <img src="github-mark.png" alt="">
+                <img src="Google_Drive_logo.png" alt="">
+                <img src="pngegg.png" alt="">
+                <img src="yt.png" alt="">
+            </div>
             <ul>
                 <li class="mainlist" tabindex="1"><i>#</i>&nbsp;add-nskeys</li>
                 <a href="htu.html">
