--- a/index.html
+++ b/index.html
@@ -13,15 +13,10 @@
                 <h1 class="title"><span>NS</span>Keys</h1>
                     <div class="currentchannel" id="currentchannel-el"><a><p><i>#</i>&nbsp;add nskeys</p></a></div>
                     <div class="nav-menu">
-                        <a href="https://github.com/indra0120/gymnasiearbete"><h4><div class="hotaction">@Github</div><img class="logo" src="github-mark.png" alt=""></h4></a>
-                        <a href=""><h4><div class="hotaction">@Documentation</div><img class="logo"src="Google_Drive_logo.png" alt=""></h4></a>
-                        <a href=""><h4><div class="hotaction">@About</div><img class="logo" src="pngegg.png" alt=""></h4></a>
+                        <a href="https://github.com/indra0120/gymnasiearbete"><h4>@Github</h4></a>
+                        <a href=""><h4>@Documentation</h4></a>
+                        <a href=""><h4>@About</h4></a>
                     </div>
-                <div class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
             </div>
         </nav> 
         
