--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <h1 class="title"><span>NS</span>Keys</h1>
                     <div class="currentchannel" id="currentchannel-el"><a><p><i>#</i>&nbsp;add nskeys</p></a></div>
                     <div class="nav-menu">
-                        <a href="https://github.com/indra0120/gymnasiearbete"><h4>@Github</h4></a>
-                        <a href=""><h4>@Documentation</h4></a>
-                        <a href=""><h4>@About</h4></a>
+                        <a href="https://github.com/indra0120/gymnasiearbete"><h4><abbr data-title="Github code"><img src="Github2.png" alt=""></abbr></h4></a>
+                        <a href=""><h4><abbr data-title="Documentation of the project"><img src="Documentation.png" alt=""></abbr></h4></a>
+                        <a href=""><h4><abbr data-title="About the creators"><img src="About.png" alt=""></abbr></h4></a>
                     </div>
             </div>
         </nav> 
@@ -23,7 +23,7 @@
     
     <div class="wrapper">
         <div class="message">
-            <img src="Nskeys_logo.png" alt="">
+            <img src="Nskeys_logo.png" alt="Nskeys_logo">
             <p class="name">nskeys</p>
             <h5 class="typing">Hi, welcome! I am NSKeys. My job is to assist you in finding the cheapest game keys in the market through the Discord application. Here is the following link to add me: <a class="addbot" href="https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot">https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot</a>.<br><br>If you have any further questions about me, browse the "how to use" textchannel. If any additional assistance is requered, feel free to contact the creators.<br><br><br>Here is a video showcasing my capabilities!</h5>
             <div class="vid">
@@ -36,10 +36,10 @@
         <div class="textchannels">
             <div class="description"><span class="test">˯</span>TEXT CHANNELS</div>
             <div class="images">
-                <img src="Nskeys_logo.png" alt="">
-                <img src="Github_logo.png" alt="">
-                <img src="GoogleDrive_logo.jpg" alt="">
-                <img src="Youtube_logo.png" alt="">
+                <img src="Nskeys_logo.png" alt="Nskeys_logo">
+                <img src="Github_logo.png" alt="Github_logo">
+                <img src="GoogleDrive_logo.jpg" alt="GoogleDrive_logo">
+                <img src="Youtube_logo.png" alt="Youtube_logo">
             </div>
             <ul>
                 <li class="mainlist" tabindex="1"><i>#</i>&nbsp;add-nskeys</li>
@@ -54,9 +54,9 @@
                 </a>
             </ul>
             <div class="guest">
-                <img src="Nskeys_logo.png" alt="">
+                <img src="DefaultDiscordUser_logo.png" alt="DefaultDiscordUser_logo">
                 <p>Guest_user</p>
-                <p id="user-el"></p>
+                <p class="usercode" id="user-el"></p>
             </div>
             
         </div>
