--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <h1 class="title"><span>NS</span>Keys</h1>
                     <div class="currentchannel" id="currentchannel-el"><a><p><i>#</i>&nbsp;add nskeys</p></a></div>
                     <div class="nav-menu">
-                        <a href="https://github.com/indra0120/gymnasiearbete"><h4><abbr data-title="Github code"><img src="Github2.png" alt=""></abbr></h4></a>
+                        <a href="https://github.com/indra0120/gymnasiearbete"><h4><abbr data-title="Github code"><img src="Github3.png" alt=""></abbr></h4></a>
                         <a href=""><h4><abbr data-title="Documentation of the project"><img src="Documentation.png" alt=""></abbr></h4></a>
                         <a href=""><h4><abbr data-title="About the creators"><img src="About.png" alt=""></abbr></h4></a>
                     </div>
@@ -32,6 +32,7 @@
                 <source src="movie.ogg" type="video/ogg">
             </div>
             <div class="text"></div>
+            <div class="textbox"><p>You do not have permission to send messages in this channel.</p></div>
        </div>
         <div class="textchannels">
             <div class="description"><span class="test">˯</span>TEXT CHANNELS</div>
