--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <div class="textchannels">
             <div class="description"><span class="test">˯</span>TEXT CHANNELS</div>
             <div class="images">
+                <img src="DefaultDiscordUser_logo.png" alt="DefaultDiscordUser_logo">
+                <div class="underline"></div>
                 <img src="Nskeys_logo.png" alt="Nskeys_logo">
                 <img src="Github_logo.png" alt="Github_logo">
                 <img src="GoogleDrive_logo.jpg" alt="GoogleDrive_logo">
