--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="wrapper">
         <div class="message">
             <img src="Nskeys_logo.png" alt="Nskeys_logo">
-            <p class="name">nskeys</p>
+            <p class="name">Ns<span>keys</span></p>
             <h5 class="typing">Hi, welcome! I am NSKeys. My job is to assist you in finding the cheapest game keys in the market through the Discord application. Here is the following link to add me: <a class="addbot" href="https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot">https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot</a>.<br><br>If you have any further questions about me, browse the "how to use" textchannel. If any additional assistance is requered, feel free to contact the creators.<br><br><br>Here is a video showcasing my capabilities!</h5>
             <div class="vid">
                 <video id="video" controls>
@@ -38,7 +38,6 @@
             <div class="description"><span class="test">˯</span>TEXT CHANNELS</div>
             <div class="images">
                 <img src="DefaultDiscordUser_logo.png" alt="DefaultDiscordUser_logo">
-                <div class="underline"></div>
                 <img src="Nskeys_logo.png" alt="Nskeys_logo">
                 <img src="Github_logo.png" alt="Github_logo">
                 <img src="GoogleDrive_logo.jpg" alt="GoogleDrive_logo">
