--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
                         <a href=""><h4><abbr data-title="About the creators"><img src="About.png" alt=""></abbr></h4></a>
                     </div>
             </div>
-        </nav> 
-        
-    
+        </nav>
     <div class="wrapper">
         <div class="message">
             <img src="Nskeys_logo.png" alt="Nskeys_logo">
@@ -44,7 +42,7 @@
                 <img src="Youtube_logo.png" alt="Youtube_logo">
             </div>
             <ul>
-                <li class="mainlist" tabindex="1"><i>#</i>&nbsp;add-nskeys</li>
+                <li class="page-toggle" class="mainlist" tabindex="1"><i>#</i>&nbsp;add-nskeys</li>
                 <a href="htu.html">
                     <li tabindex="1"><i>#</i>&nbsp;how-to-use</li>
                 </a>
@@ -55,6 +53,11 @@
                     <li tabindex="1"><i>#</i>&nbsp;contact</li>
                 </a>
             </ul>
+            <div class="page-overlay"></div>
+            <div class="page">
+              <h1>This is page 2</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at erat vel sapien tempor sagittis. Nunc scelerisque mauris et nulla laoreet, ac varius elit volutpat. Fusce maximus justo vel augue aliquet, sed ultricies mi lobortis.</p>
+            </div>
             <div class="guest">
                 <img src="DefaultDiscordUser_logo.png" alt="DefaultDiscordUser_logo">
                 <p>Guest_user</p>
