--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="/favicon-32x32.png">
     </head>
     <body>
-        <div class="wik">
+        <div class="everything">
             <nav>
                 <div class="header">
                     <h1 class="title"><span>NS</span>Keys</h1>
