--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <nav>
                 <div class="header">
                     <h1 class="title"><span>NS</span>Keys</h1>
-                        <div class="currentchannel" id="currentchannel-el"><a><p><i>#</i>&nbsp;add nskeys</p></a></div>
+                        <div class="currentchannel"><a><p><i>#</i>&nbsp;add nskeys</p></a></div>
                         <div class="nav-menu">
                             <a href="https://github.com/indra0120/gymnasiearbete"><h4><abbr data-title="Github code"><img src="Github3.png" alt=""></abbr></h4></a>
                             <a href=""><h4><abbr data-title="Documentation of the project"><img src="Documentation.png" alt=""></abbr></h4></a>
@@ -56,6 +56,11 @@
                 </ul>
                 <div class="page-overlay"></div>
                 <div class="page">
+                    <div class="header2"><img class="page-toggle2" src="hamburger-menu.png" alt=""><p><i>#</i></p><p>add-nskeys</p> 
+                            <a class="first_anchor" href="https://github.com/indra0120/gymnasiearbete"><h4><abbr data-title="Github code"><img src="Github3.png" alt=""></abbr></h4></a>
+                            <a href=""><h4><abbr data-title="Documentation of the project"><img src="Documentation.png" alt=""></abbr></h4></a>
+                            <a href=""><h4><abbr data-title="About the creators"><img src="About.png" alt=""></abbr></h4></a>
+                    </div>
                   <h1>This is page 2</h1>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at erat vel sapien tempor sagittis. Nunc scelerisque mauris et nulla laoreet, ac varius elit volutpat. Fusce maximus justo vel augue aliquet, sed ultricies mi lobortis.</p>
                 </div>
