--- a/index.html
+++ b/index.html
@@ -63,8 +63,15 @@
                         <a class="anchor" href=""><h4><abbr data-title="About the creators"><img src="About.png" alt=""></abbr></h4></a>
                     </div>
                 </div>
-              <h1>This is page 2</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at erat vel sapien tempor sagittis. Nunc scelerisque mauris et nulla laoreet, ac varius elit volutpat. Fusce maximus justo vel augue aliquet, sed ultricies mi lobortis.</p>
+              <div class="message2">
+                <img src="Nskeys_logo.png" alt="Nskeys_logo">
+                <p class="name2">NS<span>Keys</span></p>
+                <h5 class="typing2">Hi, welcome! I am NSKeys. My job is to assist you in finding the cheapest game keys in the market through the Discord application. Here is the following link to add me: <a class="addbot" href="https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot">https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot</a>.<br><br>If you have any further questions about me, browse the "how to use" textchannel. If any additional assistance is requered, feel free to contact the creators.<br><br><br>Here is a video showcasing my capabilities!</h5>
+                <div class="vid">
+                    <video id="video" controls>
+                        <source src="movie.mp4" type="video/mp4">
+                    <source src="movie.ogg" type="video/ogg">
+                </div>
             </div>
             
         </wrapper>
