--- a/index.html
+++ b/index.html
@@ -76,10 +76,12 @@
             
         </wrapper>
     </div>
-    <div class="guest">
-        <img src="DefaultDiscordUser_logo.png" alt="DefaultDiscordUser_logo">
-        <p>Guest_user</p>
-        <p class="usercode" id="user-el"></p>
+    <div class="www">
+        <div class="guest">
+            <img src="DefaultDiscordUser_logo.png" alt="DefaultDiscordUser_logo">
+            <p>Guest_user</p>
+            <p class="usercode" id="user-el"></p>
+        </div>
     </div>
 </body>
 </html>
