--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </ul>
             </div>
             <div class="page">
-                <div class="header2"><img class="page-toggle2" src="hamburger-menu.png" alt=""><p><add-nskeys># add-nskeys</p> 
+                <div class="header2"><div class="hamburger"><span class="bar"></span><span class="bar"></span><span class="bar"></span></div><p><add-nskeys># add-nskeys</p>
                     <div class="nav-menu2">
                         <a class="anchor" href="https://github.com/indra0120/gymnasiearbete"><h4><abbr data-title="Github code"><img src="Github3.png" alt=""></abbr></h4></a>
                         <a class="anchor" href=""><h4><abbr data-title="Documentation of the project"><img src="Documentation.png" alt=""></abbr></h4></a>
@@ -66,17 +66,18 @@
               <div class="message2">
                 <img src="Nskeys_logo.png" alt="Nskeys_logo">
                 <p class="name2">NS<span>Keys</span></p>
-                <h5 class="typing2">Hi, welcome! I am NSKeys. My job is to assist you in finding the cheapest game keys in the market through the Discord application. Here is the following link to add me: <a class="addbot" href="https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot">https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot</a>.<br><br>If you have any further questions about me, browse the "how to use" textchannel. If any additional assistance is requered, feel free to contact the creators.<br><br><br>Here is a video showcasing my capabilities!</h5>
+                <h5 class="typing2">Hi, welcome! I am NSKeys. My job is to assist you in finding the cheapest game keys in the market through the Discord application. Here is the following link to add me: <a class="addbot" href="https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot">https://discord.com</a>.<br><br>If you have any further questions about me, browse the "how to use" textchannel. If any additional assistance is requered, feel free to contact the creators.<br><br><br>Here is a video showcasing my capabilities!
                 <div class="vid">
                     <video id="video" controls>
                         <source src="movie.mp4" type="video/mp4">
                     <source src="movie.ogg" type="video/ogg">
                 </div>
+                </h5>
             </div>
             
         </wrapper>
     </div>
-    <div class="www">
+    <div class="guestbackground">
         <div class="guest">
             <img src="DefaultDiscordUser_logo.png" alt="DefaultDiscordUser_logo">
             <p>Guest_user</p>
