--- a/index.html
+++ b/index.html
@@ -4,153 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NSKeys</title> <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/favicon-32x32.png">
+    <title>NSKeys</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/favicon-32x32.png">
 </head>
 <body>
-    <div class= everything>
-        <div class="bump">
-            <strong>Discord</strong>
-            <div class="modifiers">
-                <div class="minimise">
-                    <p>&#124;</p>
-                </div>
-                <div class="size">
-                    <p>□</p>
-                </div>
-                <div class="close">
-                    <p>✕</p>
+    <div class="wrapper">
+        <header>
+            <div class="logo"><h1>NS<span>Keys</span></h1></div>
+            <div class="nav">
+                <h3><a href="https://github.com/indra0120/gymnasiearbete">Code</a></h3>
+                <h3><a target="_blank" href="https://discord.com/login?redirect_to=%2Foauth2%2Fauthorize%3Fclient_id%3D1012275977113567292%26permissions%3D8%26scope%3Dbot">Add Nskeys</a></h3>
+                <h3><a href="">Documentation</a></h3>
+                <h3><a href="mailto:trinkunas.kajus@gmail.com">Contact</a></h3>
+            </div>
+        </header>
+        <div class="info">
+            <div class="text">
+                <h1>Add NSKeys, <span class="auto-type"></span></h1>
+                <h2>NSKeys, an easy and fast way to find the cheapest games through the Discord application.</h2>
+                <h3>Originally a project by 4 abitious students who wanted to give a spin on something unique.</h3>
+                <p>The project itself is an <span>open source</span> project. Meaning that anyone can modify the code, contribute to it, or toy around with it for their own purposes.</p>
+                <div class="buttons">
+                    <a target="_blank" href="https://discord.com/login?redirect_to=%2Foauth2%2Fauthorize%3Fclient_id%3D1012275977113567292%26permissions%3D8%26scope%3Dbot">
+                        <div class="button"><p>ADD NSKEYS</p></div>
+                    </a>
+                    <a target="_blank" href="https://github.com/indra0120/gymnasiearbete">
+                        <div class="button2"><p>GITHUB</p></div>
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="images">
-            <img src="images/DefaultDiscordUser_logo.png" alt="DefaultDiscordUser_logo">
-            <div class="line"></div>
-            <a target="_blank" href="https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot">
-                <img src="images/Nskeys_logo.png" alt="Nskeys_logo">
-            </a>
-            <a target="_blank" href="https://github.com/indra0120/gymnasiearbete"><img src="images/Github_logo.png" alt="Github_logo"></a>
-            <a target="_blank" href="https://drive.google.com/drive/u/0/my-drive"><img src="images/GoogleDrive_logo.jpg" alt="GoogleDrive_logo"></a>
-            <a target="_blank" href="https://www.youtube.com/"><img src="images/Youtube_logo.png" alt="Youtube_logo"></a>
-        </div>
-        <div class="header">
-            <div class="name">
-                <h4 class="title"><span>NS</span>Keys<sub>&#709;</sub></h4>
-            </div>
-            <div class="navmenu">
-                <div>
-                    <a><p><img src="images/discotools-xyz-icon.png" alt="">add nskeys</p></a>
-                </div>
-                <div>
-                    <a target="_blank" href="https://github.com/indra0120/gymnasiearbete"><h4><abbr data-title="Github code"><img src="images/Github3.png" alt=""></abbr></h4></a>
-                    <a target="_blank" href="https://drive.google.com/drive/u/0/my-drive"><h4><abbr data-title="Documentation of the project"><img src="images/Documentation.png" alt=""></abbr></h4></a>
-                    <a target="_blank" href="https://drive.google.com/drive/u/0/my-drive"><h4><abbr data-title="About the creators"><img src="images/About.png" alt=""></abbr></h4></a>
-                    <div class="searchbox">
-                        <p>Don't search</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="textchannels">
-            <p class="description"><sub>&#709;</sub>TEXT CHANNELS</p>
-            <ul>
-                <li class="page-toggle" class="mainlist" tabindex="1"><img src="images/discotools-xyz-icon.png" alt="">add-nskeys</li>
-                <a href="html/htu.html">
-                    <li tabindex="1"><img src="images/discotools-xyz-icon.png" alt="">how-to-use</li>
-                </a>
-                <a href="html/code.html">
-                    <li tabindex="1"><img src="images/discotools-xyz-icon.png" alt="">code</li>
-                </a>
-                <a href="html/contact.html">
-                    <li tabindex="1"><img src="images/discotools-xyz-icon.png" alt="">contact</li>
-                </a>
-            </ul>
-            <div class="guestbackground">
-                <div class="guest">
-                    <img src="images/DefaultDiscordUser_logo.png" alt="DefaultDiscordUser_logo">
-                    <p>Guest_user</p>
-                    <p class="usercode" id="user-el"></p>
-                </div>
-            </div>
-        </div>
-        <div class="e">
-            <img src="images/Nskeys_logo.png" alt="">
-            <div class="maintext"><h4>NS<span>Keys</span></h4><p>
-                Hi, you can call me NSKeys. My job is to assist you in finding the cheapest prices for the best video games on the market right now! I do this through the Discord application. If you would like to add me to your server and try me out, click this link!
-                <a href="https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot">Add NSKeys</a>.
-                If you happen to have any questions about me or how I work, browse the how-to-use textchannel below.
-                If any additional assistance is required, feel free to contact the creators. You can find their Discord usernames on your right.</p>
-        
-                <p><span>Note:</span> NSKeys requiers all discord server permissions to be able to function.</p>
-                <p>The project itself is an <span>open source</span> project. Meaning that anyone can modify the code, contribute to it, or toy around with it for their own purposes. You can find the python executable code in the "code" text-channel.</p>
-                <p>Don't worry. This isn't some russian spyware (or is it? hehehe...). We just wanted to make something cool for our school project.</p>
-                <p><br>Here is a video showcasing the bots capabilities!</p>
-                <div class="vid">
-                    <video id="video" controls>
-                        <source src="movie.mp4" type="video/mp4">
-                    <source src="movie.ogg" type="video/ogg">
-                </div>
-            </div>
-            <div class="textinput"><p>You do not have permission to send messages in this channel.</p></div>
-        </div>
-        <div class="creators">
-            <p>CREATORS OF NSKEYS</p>
-            <ul>
-                <a target="_blank" href="https://discordapp.com/users/386229632648871936">
-                    <li><img src="images/ben.jpg" alt="DefaultDiscordUser_logo" alt="">&nbsp;indra</li>
-                </a>
-                <a target="_blank" href="https://discordapp.com/users/282548554285711370">
-                    <li><img src="images/Garfield.jpg" alt="DefaultDiscordUser_logo" alt="">&nbsp;itagg</li>
-                </a>
-                <a target="_blank" href="https://discordapp.com/users/442997481790504971">
-                    <li><img src="images/kajus_monkey.png" alt="DefaultDiscordUser_logo" alt="">&nbsp;minepiler</li>
-                </a>
-                <a target="_blank" href="https://discordapp.com/users/436513703068827659">
-                    <li><img src="images/lukas.jpg" alt="DefaultDiscordUser_logo" alt="">&nbsp;NotGeckz</li>
-                </a>
-            </ul>
+        <div class="cinematic">
+            <video autoplay loop muted>
+                <source src="/movie.mp4" type=video/mp4>
+            </video>
+            <h2>What you don't see...</h2>
         </div>
     </div>
-
-    <div class="mobileview">
-        <div class="bump2"></div>
-        <div class="images2">
-            <img src="images/DefaultDiscordUser_logo.png" alt="DefaultDiscordUser_logo">
-            <div class="line2"></div>
-
-            <a target="_blank" href="https://discord.com/oauth2/authorize?client_id=1012275977113567292&permissions=8&scope=bot">
-                <img src="images/Nskeys_logo.png" alt="Nskeys_logo">
-            </a>              
-            <a target="_blank" href="https://github.com/indra0120/gymnasiearbete"><img src="images/Github_logo.png" alt="Github_logo"></a>
-            <a target="_blank" href="https://github.com/indra0120/gymnasiearbete"><img src="images/GoogleDrive_logo.jpg" alt="GoogleDrive_logo"></a>
-            <a target="_blank" href="https://www.youtube.com/"><img src="images/Youtube_logo.png" alt="Youtube_logo"></a>
-
-        </div>
-        <div class="textchannels2">
-            <div><h4 class="title"><span>NS</span>Keys</h4></div>
-            <p class="description"><sub>&#709;</sub>TEXT CHANNELS</p>
-            <ul>
-                <li class="page-toggle" class="mainlist" tabindex="1"><img src="images/discotools-xyz-icon.png" alt="">add-nskeys</li>
-                <a href="htu.html">
-                    <li tabindex="1"><img src="images/discotools-xyz-icon.png" alt="">how-to-use</li>
-                </a>
-                <a href="code.html">
-                    <li tabindex="1"><img src="images/discotools-xyz-icon.png" alt="">code</li>
-                </a>
-                <a href="contact.html">
-                    <li tabindex="1"><img src="images/discotools-xyz-icon.png" alt="">contact</li>
-                </a>
-            </ul>
-        </div>
-        <div class="maincontent"></div>
-        <footer>
-            <img src="images/discord-2-128.png" alt="">
-            <a target="_blank" href="https://github.com/indra0120/gymnasiearbete"><img src="images/Github3.png" alt=""></a>
-            <a target="_blank" href="https://drive.google.com/drive/u/0/my-drive"><img src="images/Documentation.png" alt=""></a>
-            <a target="_blank" href="https://drive.google.com/drive/u/0/my-drive"><img src="images/About.png" alt=""></a>
-            <img src="images/DefaultDiscordUser_logo.png" alt="">
-        </footer>
-    </div>
-    <script src="script.js"></script>
+    <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
+    <script>
+        var typed = new Typed(".auto-type", {
+            strings:["the discord webscraper.","what are you waiting for?"],
+            typeSpeed: 100,
+            backSpeed: 100,
+            loop: true
+        })
+    </script>
 </body>
 </html>
