--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <div class="info">
             <div class="text">
                 <h1>Add NSKeys, <span class="auto-type"></span></h1>
-                <h2>NSKeys, an easy and fast way to find the cheapest games through the Discord application.</h2>
+                <h2><span>NSKeys</span>, an easy and fast way to find the cheapest games through the <span>Discord</span> application.</h2>
                 <h3>Originally a project by 4 abitious students who wanted to give a spin on something unique.</h3>
                 <p>The project itself is an <span>open source</span> project. Meaning that anyone can modify the code, contribute to it, or toy around with it for their own purposes.</p>
                 <div class="buttons">
                     <a target="_blank" href="https://discord.com/login?redirect_to=%2Foauth2%2Fauthorize%3Fclient_id%3D1012275977113567292%26permissions%3D8%26scope%3Dbot">
-                        <div class="button"><p>ADD NSKEYS</p></div>
+                        <div class="button"><p><span>ADD </span>NSKEYS</p></div>
                     </a>
                     <a target="_blank" href="https://github.com/indra0120/gymnasiearbete">
                         <div class="button2"><p>GITHUB</p></div>
