--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p>The project itself is an <span>open source</span> project. Meaning that anyone can modify the code, contribute to it, or toy around with it for their own purposes.</p>
                 <div class="buttons">
                     <a target="_blank" href="https://discord.com/login?redirect_to=%2Foauth2%2Fauthorize%3Fclient_id%3D1012275977113567292%26permissions%3D8%26scope%3Dbot">
-                        <div class="button"><p><span>ADD </span>NSKEYS</p></div>
+                        <div class="button"><p>NSKEYS</p></div>
                     </a>
                     <a target="_blank" href="https://github.com/indra0120/gymnasiearbete">
                         <div class="button2"><p>GITHUB</p></div>
@@ -39,7 +39,6 @@
             <video autoplay loop muted>
                 <source src="/movie.mp4" type=video/mp4>
             </video>
-            <h2>What you don't see...</h2>
         </div>
     </div>
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
